Add desc & context for solid engine project

--- a/projects/SolidEngine/solidEngine.html
+++ b/projects/SolidEngine/solidEngine.html
@@ -21,7 +21,7 @@
         <!-- Navigation-->
         <a class="menu-toggle rounded" href="../../index.html#portfolio"><i class="fa-solid fa-arrow-left"></i></a>
         <!-- Project -->
-        <section class="content-section">
+        <section class="content-section pt-5">
             <div class="container px-4 px-lg-5">
                 <div class="content-section-heading text-center">
                     <h3 class="text-secondary mb-0">Projet</h3>
@@ -42,10 +42,19 @@
                     <div class="mt-2"></div>
                     
                     <h2>Description</h2>
-
                     <p class="lead mb-5">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        Solid Engine est un moteur de jeu custom 3D avec editeur intégré qui propose de nombreuses fonctionnalitées.<br>
+                        Il intègre notamment des fonctionnalitées Nvidia PhysX, de l'animation de mesh, du scripting C++, un gestionnaire d'assets multithread, du PBR et bien d'autres..
                     </p>
+
+                    <h2>Contexte</h2>
+                    <p class="lead mb-5">
+                        Solid Engine est projet étudiant de deuxieme année de Game Programming qui avait pour but de réaliser un moteur de jeu custom en 3D avec son éditeur.<br>
+                        Il à été réalisé de A à Z par 4 personnes sur 5 mois.<br>
+                        Le but du projet est de voir et concevoir ce que l'on peut retrouver derrière un moteur de jeu tel que Unity&copy; ou Unreal Engine&copy; 
+                        afin d'en comprendre les rouages et de gagner des compétences dans la programmation moteur.
+                    </p>
+
                 </div>
             </div>
         </section>
