Add projects and finish solid engine project

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         </a>
                     </div>
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
+                        <a class="portfolio-item" href="projects/RtsAi/rtsAi.html">
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h1">RTS IA</div>
@@ -137,7 +137,7 @@
                         </a>
                     </div>
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
+                        <a class="portfolio-item" href="projects/IceLava/iceLava.html">
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h1">Ice&Lava</div>
@@ -148,7 +148,7 @@
                         </a>
                     </div>
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
+                        <a class="portfolio-item" href="projects/TPSMulti/tpsMulti.html">
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h1">TPS Multi</div>
@@ -159,7 +159,7 @@
                         </a>
                     </div>
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
+                        <a class="portfolio-item" href="projects/DeamonUnleashed/deamonUnleashed.html">
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h1">DAEMON UNLEASHED</div>
@@ -170,7 +170,7 @@
                         </a>
                     </div>
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
+                        <a class="portfolio-item" href="projects/Blob/blob.html">
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h1">3lob</div>
