--- a/projects/TPSMulti/tpsMulti.html
+++ b/projects/TPSMulti/tpsMulti.html
@@ -15,7 +15,7 @@
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="../../css/styles.css" rel="stylesheet" />
+        <link href="../../css/styles.css" rel="stylesheet"/>
     <body id="page-top">
         <!-- Navigation-->
         <a class="back-toggle rounded" href="../../index.html#portfolio"><i class="fa-solid fa-arrow-left"></i></a>
@@ -24,12 +24,12 @@
             <div class="container px-4 px-lg-5">
                 <div class="content-section-heading text-center">
                     <h3 class="text-secondary mb-0">Projet</h3>
-                    <h2 class="mb-5">Solid Engine</h2>
+                    <h2 class="mb-5">RTS AI</h2>
                 </div>
-                <div class="container-iframe mb-3">
+                <!-- <div class="container-iframe mb-3">
                     <iframe class="responsive-iframe" width="640" height="360" src="https://www.youtube.com/embed/3p5YsPb44UI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-                <div>
+                </div> -->
+                <!-- <div>
                     
                     <span class="my-badge">C++</span>
                     <span class="my-badge">GLSL/HLSL</span>
@@ -127,7 +127,7 @@
                             
                         </div>
                     </div>                    
-                </div>
+                </div> -->
             </div>
         </section>
         <!-- Footer-->
