--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div class="col-lg-10">
                         <h2>Qui suis-je ?</h2>
                         <p class="lead mb-5">
-                            Salut 👋 Je m'appelle Guillaume Lefebvre, Je suis développeur de jeu vidéo passionné, qui adore toutes sortes de jeux vidéo (aventure, AAA, indé ou encore compétitif) ! 
+                            Salut 👋 Je m'appelle Guillaume Lefebvre, je suis développeur de jeu vidéo passionné, qui adore toutes sortes de jeux vidéo (aventure, AAA, indé ou encore compétitif) ! 
                             <br>
                             Mon domaine d'activité est vaste, allant du Tooling jusqu'a la programmation gameplay en passant par la
                             programmation moteur, je m'interesse un peu a tout. J'ai eu l'occasion tout a long de mes études de travailler sur différents projet seul ou en
@@ -83,7 +83,7 @@
                         <h4><strong>Moteurs</strong></h4>
                         <p class="mb-0">
                             Pour ce qui est des moteurs de jeu j'utilise Unity ainsi que Unreal Engine 4.<br>
-                            Dans le cadres de mes études j'ai également réaliser de A à Z un moteur custom Solid Engine.<br>
+                            Dans le cadres de mes études j'ai également réalisé de A à Z un moteur custom : Solid Engine.<br>
                             <a class="" href="#!">Projet ici !</a>
                         </p>
                     </div>
@@ -91,8 +91,8 @@
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="fa-solid fa-code-branch"></i></span>
                         <h4><strong>Versionning</strong></h4>
                         <p class="mb-0">
-                            Du côté du versionning je sais utiliser aussi bien Git que Perforce, j'ai pu utiliser ces deux systèmes lors de mes projets.<br>
-                            J'ai également un github <a class="" href="#!">ici</a> !
+                            Du côté du versionning j'utilise aussi bien Git que Perforce, deux outils que j'ai pu utiliser lors de mes projets.<br>
+                            Vous pouvez retrouvez mon github <a class="" href="#!">ici</a> !
                         </p>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
@@ -197,9 +197,6 @@
                 <ul class="list-inline mb-5">
                     <li class="list-inline-item">
                         <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/guillaumelbf" target="_blank"><i class="icon-social-linkedin"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white mr-3" href="#!" target="_blank"><i class="icon-social-twitter"></i></a>
                     </li>
                     <li class="list-inline-item">
                         <a class="social-link rounded-circle text-white" href="https://github.com/guillaumelbf" target="_blank"><i class="icon-social-github"></i></a>
