--- a/projects/SolidEngine/solidEngine.html
+++ b/projects/SolidEngine/solidEngine.html
@@ -43,7 +43,7 @@
                     <p class="fs-5 mb-5">
                         <i class="icon-social-github"></i> <a class="social-link rounded-circle text-white" href="https://github.com/SolidTeamDev/SolidEngine" target="_blank">Solid Engine</a>
                         <i class="fa-regular fa-clock"></i> 5 mois
-                        <i class="fa-solid fa-user-group"></i> 4 contributeurs
+                        <i class="fa-solid fa-user-group"></i> 4 contributeurs(<a href="https://github.com/Zellionis">Tristan Francillonne</a>, <a href="https://github.com/azatsu" target="_blank">Antonin Galliot</a>, <a href="https://github.com/guillaumelbf" target="_blank">Guillaume Lefebvre</a>, <a href="https://github.com/rytt0001" target="_blank">Ryan Sandrin</a>)
                     </p>
 
                     <h2>Description</h2>
@@ -136,9 +136,6 @@
                 <ul class="list-inline mb-5">
                     <li class="list-inline-item">
                         <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/guillaumelbf" target="_blank"><i class="icon-social-linkedin"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white mr-3" href="#!" target="_blank"><i class="icon-social-twitter"></i></a>
                     </li>
                     <li class="list-inline-item">
                         <a class="social-link rounded-circle text-white" href="https://github.com/guillaumelbf" target="_blank"><i class="icon-social-github"></i></a>
