Add PFE projet and finish rts project

--- a/projects/SolidEngine/solidEngine.html
+++ b/projects/SolidEngine/solidEngine.html
@@ -48,15 +48,15 @@
 
                     <h2>Description</h2>
                     <p class="mb-5">
-                        Solid Engine est un moteur de jeu custom 3D avec editeur intégré qui propose de nombreuses fonctionnalitées.<br>
-                        Il intègre notamment des fonctionnalitées Nvidia PhysX, de l'animation de mesh, du scripting C++, un gestionnaire d'assets multithread, du PBR et bien d'autres..
+                        Solid Engine est un moteur de jeu custom 3D avec éditeur intégré qui propose de nombreuses fonctionnalités.<br>
+                        Il intègre notamment des fonctionnalités Nvidia PhysX, de l'animation de mesh, du scripting C++, un gestionnaire d'assets multithread, du PBR et bien d'autres..
                     </p>
 
                     <h2>Contexte</h2>
                     <p class="mb-5">
-                        Solid Engine est projet étudiant de deuxieme année de Game Programming qui avait pour but de réaliser un moteur de jeu custom en 3D avec son éditeur.<br>
-                        Il à été réalisé de A à Z par 4 personnes sur 5 mois.<br>
-                        La finalitée du projet est de voir et concevoir ce que l'on peut retrouver derrière un moteur de jeu tel que Unity&copy; ou Unreal Engine&copy; 
+                        Solid Engine est un projet étudiant de deuxième année de Game Programming qui a pour but de réaliser un moteur de jeu custom en 3D avec son éditeur.<br>
+                        Il a été réalisé de A à Z par 4 personnes sur 5 mois.<br>
+                        La finalité du projet est de voir et de concevoir ce que l'on peut retrouver derrière un moteur de jeu tel que Unity&copy; ou Unreal Engine&copy; 
                         afin d'en comprendre les rouages et de gagner des compétences dans la programmation moteur.
                     </p>
                     
