--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <header class="masthead d-flex align-items-center">
             <div class="container px-4 px-lg-5 text-center">
                 <h1 class="mb-1">Guillaume Lefebvre</h1>
-                <h3 class="mb-5"><em>Portfolio</em></h3>
+                <h3 class="text-secondary mb-5"><em>Portfolio</em></h3>
                 <a class="btn btn-primary btn-xl" href="#portfolio">Mes Projets</a>
             </div>
         </header>
@@ -115,6 +115,17 @@
                 </div>
                 <div class="row gx-0">
                     <div class="col-lg-6">
+                        <a class="portfolio-item" href="projects/PFE/pfe.html">
+                            <div class="caption">
+                                <div class="caption-content">
+                                    <div class="h1">Rush'N'Trap</div>
+                                    <p class="mb-0">Projet en cours</p>
+                                </div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/PFE_Portfolio_Card.png" alt="..." />
+                        </a>
+                    </div>
+                    <div class="col-lg-6">
                         <a class="portfolio-item" href="projects/SolidEngine/solidEngine.html">
                             <div class="caption">
                                 <div class="caption-content">
@@ -147,7 +158,7 @@
                             <img class="img-fluid" src="assets/img/TechArt_Portfolio_Card.png" alt="..." />
                         </a>
                     </div>
-                    <div class="col-lg-6">
+                    <!-- <div class="col-lg-6">
                         <a class="portfolio-item" href="projects/TPSMulti/tpsMulti.html">
                             <div class="caption">
                                 <div class="caption-content">
@@ -179,18 +190,10 @@
                             </div>
                             <img class="img-fluid" src="assets/img/Blob_Portfolio_Card.png" alt="..." />
                         </a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
-        <!-- Call to Action-->
-        <!-- <section class="content-section bg-primary text-white">
-            <div class="container px-4 px-lg-5 text-center">
-                <h2 class="mb-4">The buttons below are impossible to resist...</h2>
-                <a class="btn btn-xl btn-light me-4" href="#!">Click Me!</a>
-                <a class="btn btn-xl btn-dark" href="#!">Look at Me!</a>
-            </div>
-        </section> -->
         <!-- Footer-->
         <footer class="footer text-center">
             <div class="container px-4 px-lg-5">
