Complete projects + Spell check

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                         <p class="lead mb-5">
                             Salut 👋 Je m'appelle Guillaume Lefebvre, je suis développeur de jeu vidéo passionné, qui adore toutes sortes de jeux vidéo (aventure, AAA, indé ou encore compétitif) ! 
                             <br>
-                            Mon domaine d'activité est vaste, allant du Tooling jusqu'a la programmation gameplay en passant par la
-                            programmation moteur, je m'interesse un peu a tout. J'ai eu l'occasion tout a long de mes études de travailler sur différents projet seul ou en
+                            Mon domaine d'activité est vaste, allant du tooling jusqu'à la programmation gameplay en passant par la
+                            programmation moteur, je m'intéresse un peu a tout. J'ai eu l'occasion tout au long de mes études de travailler sur différents projet seul ou en
                             équipe qui m'ont permis de développer de nombreuses compétences !
                         </p>
                         <a class="btn btn-dark btn-xl" href="#skills">Mes compétences</a>
@@ -74,16 +74,16 @@
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="fa-solid fa-code"></i></span>
                         <h4><strong>Programmation</strong></h4>
                         <p class="mb-0">
-                            Mes languages de programmation sont principalement le C++ et le C#. <br>
-                            Mais j'utilise également d'autre languages comme le GLSL/HLSL pour les shaders.
+                            Mes langages de programmation sont principalement le C++ et le C#. <br>
+                            Mais j'utilise également d'autres langages comme le GLSL/HLSL pour les shaders.
                         </p>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="fa-solid fa-gears"></i></span>
                         <h4><strong>Moteurs</strong></h4>
                         <p class="mb-0">
-                            Pour ce qui est des moteurs de jeu j'utilise Unity ainsi que Unreal Engine 4.<br>
-                            Dans le cadres de mes études j'ai également réalisé de A à Z un moteur custom : Solid Engine.<br>
+                            Pour ce qui est des moteurs de jeu, j'utilise Unity ainsi qu'Unreal Engine 4.<br>
+                            Dans le cadre de mes études, j'ai également réalisé de A à Z un moteur custom : Solid Engine.<br>
                             <a class="" href="#!">Projet ici !</a>
                         </p>
                     </div>
@@ -92,15 +92,15 @@
                         <h4><strong>Versionning</strong></h4>
                         <p class="mb-0">
                             Du côté du versionning j'utilise aussi bien Git que Perforce, deux outils que j'ai pu utiliser lors de mes projets.<br>
-                            Vous pouvez retrouvez mon github <a class="" href="#!">ici</a> !
+                            Vous pouvez retrouver mon github <a class="" href="#!">ici</a> !
                         </p>
                     </div>
                     <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
                         <span class="service-icon rounded-circle mx-auto mb-3"><i class="fa-solid fa-calendar-day"></i></span>
                         <h4><strong>Gestion de projet</strong></h4>
                         <p class="mb-0">
-                            La réalisation de projet collaboratif avec les différents coeur de métier m'ont permis de mettre en place et d'utiliser des méthodes 
-                            de gestion de projet, notament la méthode Scrum.
+                            La réalisation de projets collaboratifs avec les différents cœurs de métier m'ont permis de mettre en place et d'utiliser des méthodes 
+                            de gestion de projet, notamment la méthode Scrum.
                         </p>
                     </div>
                 </div>
