--- a/projects/PFE/pfe.html
+++ b/projects/PFE/pfe.html
@@ -63,6 +63,7 @@
                 <div>
                     
                     <span class="my-badge">C++</span>
+                    <span class="my-badge">Blueprint</span>
                     <span class="my-badge">UE4</span>
                     <span class="my-badge">Windows</span>
 
@@ -81,7 +82,8 @@
 
                     <h2>Contexte</h2>
                     <p class="mb-5">
-                        Rush'N'Trap est un projet étudiant de dernière année qui a pour but de compiler toutes les connaissances apprise dans ultime projet en collaboration avec tout les corps de métier du jeu vidéo (Game Designer, Game Artist, Sound Designer, Producer and Game Programmer)
+                        Rush'N'Trap est un projet étudiant de dernière année qui a pour but de compiler toutes les connaissances apprise dans un ultime projet 
+                        en collaboration avec tous les corps de métier du jeu vidéo. (Game Designer, Game Artist, Sound Designer, Producer and Game Programmer)
                     </p>                 
                 </div>
             </div>
@@ -92,9 +94,6 @@
                 <ul class="list-inline mb-5">
                     <li class="list-inline-item">
                         <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/guillaumelbf" target="_blank"><i class="icon-social-linkedin"></i></a>
-                    </li>
-                    <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white mr-3" href="#!" target="_blank"><i class="icon-social-twitter"></i></a>
                     </li>
                     <li class="list-inline-item">
                         <a class="social-link rounded-circle text-white" href="https://github.com/guillaumelbf" target="_blank"><i class="icon-social-github"></i></a>
