--- a/projects/RtsAi/rtsAi.html
+++ b/projects/RtsAi/rtsAi.html
@@ -79,15 +79,15 @@
                     <h2>Description</h2>
                     <p class="mb-5">
                         RTS AI est un Real Time Strategy Game (RTS) dans lequel vous pouvez créer des unités ainsi que des bâtiments afin de prendre le contrôle de la carte et de vaincre l'adversaire. <br>
-                        Des points de capture sont présents sur la carte permettant de gagner des resources afin de creer bâtiment et unitées. <br>
+                        Des points de capture sont présents sur la carte permettant de gagner des ressources afin de créer bâtiment et unités. <br>
                         Le but est simple : détruire les bâtiments adverses pour gagner. <br>
                         Ce projet a pour but de développer une IA qui essaiera de gagner en s'adaptant le plus possible à son adversaire.
                     </p>
 
                     <h2>L'IA</h2>
                     <p class="mb-5">
-                        Le type d'IA qui a été utilisé est un Behaviour Tree, qui permet de programmer les différents comportements tel que la défense, l'attaque, la capture de points, la création d'unités, etc. <br>
-                        Ce type d'IA est pratique pour définir les enchaînements des actions, les organiser et les déclancher. A ça une map d'influence à été créée afin de faciliter les décisions qui doivent être prise par l'IA. 
+                        Le type d'IA qui a été utilisé est un Behaviour Tree, qui permet de programmer les différents comportements tels que la défense, l'attaque, la capture de points, la création d'unités, etc. <br>
+                        Ce type d'IA est pratique pour définir les enchaînements des actions, les organiser et les déclencher. À ça une map d'influence a été créée afin de faciliter les décisions qui doivent être prise par l'IA. 
                         Cette map d'influence donne les informations globales de la map point de vue tactique, par exemple la force d'une armée, les mouvements de troupes, etc.
                     </p>
 
